--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,25 @@
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
-<body>
+<body> 
+<% flash.each do |key, msg| %>	
+<%= content_tag :div, msg, :id => key  %>
+<% end %>      
+
+<div id='container'> 
+	<div id="user_nav">
+		<% if user_signed_in? %>
+		Signed in as <%= current_user.email %>. Not you?
+		<%= link_to "Sign out", destroy_user_session_path %>
+		<% else %>
+		<%= link_to "Sign up", authentications_path %> or <%= link_to "Sign in", authentications_path %>
+		<% end %>
+
+	</div>	
+	
 
 <%= yield %>
 
+</div>
 </body>
 </html>
