--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 		Signed in as <%= current_user.email %>. Not you?
 		<%= link_to "Sign out", destroy_user_session_path %>
 		<% else %>
-		<%= link_to "Sign up", authentications_path %> or <%= link_to "Sign in", authentications_path %>
+		<%= link_to "Sign up", authentications_path %> or <%= link_to "Sign in", authentications_path %> or <%= link_to "Login with Twitter", "/auth/twitter" %>
 		<% end %>
 
 	</div>	
