--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to "Back", site_remoteurl_reviews_path(@remoteurl.site_id, @remoteurl.id) %>  
+<%= link_to "Back", site_remoteurl_reviews_path(@remoteurl.site_id, @remoteurl) %>  
