--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,10 +1,19 @@
 <h2>Sign up</h2>
+<% (what = session[:omniauth] && session[:omniauth]['user_info']).nil? ? nil : '' %> 
+
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  
+  <%= image_tag (what.nil? ? "" : what['image']), :title => "title", :class => "class" %>
+  
+  <p><%= f.label :name %><br />
+  <%= f.text_field :name, :value => (what.nil? ? "" : what['name']) %></p>
+  
+  <p><%= f.label :email %> 
+  <%= f.text_field :email, :value => (what.nil? ? "" : what['email']) %></p> 
 
-  <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
+  
 <% if @user.password_required? %>
   <p><%= f.label :password %><br />
   <%= f.password_field :password %></p>
