--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -7,7 +7,7 @@
   <%= f.text_field :email %></p>
 
   <p><%= f.label :phone_number %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :phone_number %></p>
+  <%= f.text_field :phone_number %></p>
 
   <p><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
   <%= f.password_field :password %></p>
