--- a/app/views/remoteurls/show.html.erb
+++ b/app/views/remoteurls/show.html.erb
@@ -24,6 +24,7 @@
   </tr>
 </table>
 <% form_for("recording", :url => recordings_makecall_path, :html => { :class => "edit_user" } ) do |f| -%>
+	<%= f.hidden_field :remoteurl_id, :value => @remoteurl.id  %>
 	<div class="field">
 	<%= f.label :synopsis, "synopsis" %>
 	<%= f.text_field :synopsis, :size => "8" %>
