--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -15,9 +15,9 @@
   <p><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></p>
 
-  <p><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></p>
-
+  <p><#%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <#%= f.password_field :current_password %></p>
+  # TODO: clean this page up with correct info
   <p><%= f.submit "Update" %></p>
 <% end %>
 
