--- a/app/views/remoteurls/show.html.erb
+++ b/app/views/remoteurls/show.html.erb
@@ -2,43 +2,41 @@
 <table>
   <tr>
     <td width="50">
-      <img src="/images/authbuttons/linkedin.png" width="50" height="50" alt="Linkedin">
+      <img class="profile_pic" src="<%= current_user.profile_pic.empty? ? "/images/blankprofilepic.png" : current_user.profile_pic %>" width="50" height="50">
       <div class="left-bar">
-        Settings 
-        Logout
+        <% if user_signed_in? %> 
+        <%= link_to "Settings", "#{edit_user_registration_path}?layout=embed", :rel => "window800", :class => "auth_popup" %>
+    		<%= link_to "Logout", "#{destroy_user_session_path}?layout=embed", :rel => "window800", :class => "auth_popup" %>
+        <% end %>
       </div>  
     </td>
     <td class="table-rightside">
-      <p style="text-decoration: underline;">Hello Mr. Jones</p>
+      <p><%= current_user.full_name %> / <%= current_user.title %> @ <%= current_user.company %></p>
       <!-- <p>John Carter / President @ Planet Mars</p>                         -->
       
       <div class="optional-text">
+        <% form_for("recording", :url => recordings_makecall_path, :html => { :class => "edit_user" } ) do |f| -%>
+        	<%= f.hidden_field :remoteurl_id, :value => @remoteurl.id  %>
         <div class="text-area">
-         <textarea name="Name" class="short-text"></textarea>  
+        	<%= f.text_area :synopsis, :class => "short-text" %>
+
         </div>
         <div class="expand-bottom">
-          <a href="#" class="link">How to leave the perfect review</a>
-          <input class="vouch-button" type="submit" value="Start Call!">
-        </div>        
+          <%= link_to "How to leave the perfect review", "/example-review.html", :class => "link auth_popup" %>
+           <%= f.submit "Call Now!", :class => "vouch-button" %>	
+        </div>
+        <% end -%>          
       </div>
   </tr>
 </table>
-<% form_for("recording", :url => recordings_makecall_path, :html => { :class => "edit_user" } ) do |f| -%>
-	<%= f.hidden_field :remoteurl_id, :value => @remoteurl.id  %>
-	<div class="field">
-	<%= f.label :synopsis, "synopsis" %>
-	<%= f.text_field :synopsis, :size => "8" %>
-	</div>
-	<div class="actions">
-	<%= f.submit "Call Me Now!", :id => "user_submit" %>	
-	</div>
-<% end -%>
+
+
 
 <% else %>
 <table>
   <tr>
     <td width="50">
-      <img src="/images/authbuttons/linkedin.png" width="50" height="50" alt="Linkedin">
+      <img class="profile_pic" src="/images/blankprofilepic.png" width="50" height="50" alt="Linkedin">
   
     </td>
     <td class="table-rightside">
