--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,8 +1,12 @@
-#user_nav{text-align: right;}
+body{
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
 
 th {text-align: left;padding: 20px 0px;}
 #site_url {margin: 10px 0px;}   
-.actions {margin-bottom: 10px;}                     
+.actions {margin-bottom: 10px;}
+
+#user_nav{text-align: right;}
 
 .authentications {
   margin-bottom: 30px;
@@ -63,9 +67,7 @@ th {text-align: left;padding: 20px 0px;}
   margin-bottom: 10px;
 }
 
-body{
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-}
+
 textarea{
 	width:99.2%;
 	height:6em;
@@ -87,12 +89,25 @@ table{
   font-weight: 600;
 	font-size:1.2em;
 }
+
 .grid_6 {
 	float:left;
-	margin:0px 0px 0px 4px;
+	margin:0px 0px 0px 0px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 600;
 	font-size:1.2em;
+} 
+
+
+.profile_pic {
+		overflow:hidden;
+    border: 1px solid #c1c1c1;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 4px rgba(0,0,0, .16);
+    -moz-box-shadow: inset 0 1px 4px rgba(0,0,0, .16);
+    box-shadow: inset 0 1px 4px rgba(0,0,0, .16);
 }
 
 .left-bar{
@@ -105,23 +120,21 @@ table{
 	vertical-align:top;
 	padding-left:4px;
 } 
- 
+
 .table-rightside p{
 	margin: -2px 0px 1px 0px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 500;
 	font-size:1.2em;
 }
-.review-each{
-	width:500px;
-}
+
 .expand-bottom{
 	border-top:dotted;
 	border-width: 1px;
 	border-color: grey;
 	display:none;
-}
-                   
+} 
+
 .link{ 
 	margin-left: 2px;
 	font-size: 12px;
@@ -147,7 +160,7 @@ table{
     -webkit-box-shadow: inset 1px 1px 0 rgba(255,255,255, .4), inset -1px 0 0 rgba(255,255,255, .4) ,0 1px 2px rgba(72,76,80, .25);
     -moz-box-shadow: 0 1px 2px rgba(72,76,80, .25);
     box-shadow: 0 1px 2px rgba(72,76,80, .25);
-    
+
     font-weight: 600;
     right: -1px;
     top: -1px;
@@ -183,90 +196,3 @@ table{
     -moz-box-shadow: inset 0 1px 4px rgba(0,0,0, .16);
     box-shadow: inset 0 1px 4px rgba(0,0,0, .16);
 } 
-
-.comments{
- margin-top:30px; 
-} 
-.trans{
-	background-color: lightgrey;
-}
-
-.audiojs { width: 500px; height: 22px; background: #404040;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #444), color-stop(0.5, #555), color-stop(0.51, #444), color-stop(1, #444));
-  background-image: -moz-linear-gradient(center top, #444 0%, #555 50%, #444 51%, #444 100%);
-  -webkit-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3); -moz-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
-  -o-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3); box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3); }
-.audiojs .play-pause { width: 15px; height: 20px; padding: 0px 8px 0px 0px; }
-.audiojs p { width: 25px; height: 20px; margin: -3px 0px 0px -1px; }
-.audiojs .scrubber { width: 350px; background: #5a5a5a; height: 10px; margin: 5px; }
-.audiojs .progress { height: 10px; width: 0px; background: #ccc;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ccc), color-stop(0.5, #ddd), color-stop(0.51, #ccc), color-stop(1, #ccc));
-  background-image: -moz-linear-gradient(center top, #ccc 0%, #ddd 50%, #ccc 51%, #ccc 100%); }
-.audiojs .loaded { width: 350; height: 10px; background: #000;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #222), color-stop(0.5, #333), color-stop(0.51, #222), color-stop(1, #222));
-  background-image: -moz-linear-gradient(center top, #222 0%, #333 50%, #222 51%, #222 100%); }
-.audiojs .time { float: left; height: 25px; line-height: 25px; }
-.audiojs .error-message { height: 24px;line-height: 24px; }
-
-.track-details { clear: both; height: 20px; width: 448px; padding: 1px 6px; background: #eee; color: #222; font-family: monospace; font-size: 11px; line-height: 20px;
-  -webkit-box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.15); -moz-box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.15); }
-.track-details:before { content: '♬ '; }
-.track-details em { font-style: normal; color: #999; }
-
-.review-left{
-	float:left;
-}            
-.review-right{
-	float:right;
-}
-
-/* =Clear Floated Elements
---------------------------------------------------------------------------------*/
-
-/* http://sonspring.com/journal/clearing-floats */
-
-html body * span.clear,
-html body * div.clear,
-html body * li.clear,
-html body * dd.clear
-{
-	background: none;
-	border: 0;
-	clear: both;
-	display: block;
-	float: none;
-	font-size: 0;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	visibility: hidden;
-	width: 0;
-	height: 0;
-}
-
-/* http://www.positioniseverything.net/easyclearing.html */
-
-.clearfix:after
-{
-	clear: both;
-	content: '.';
-	display: block;
-	visibility: hidden;
-	height: 0;
-}
-
-.clearfix
-{
-	display: inline-block;
-}
-
-* html .clearfix
-{
-	height: 1%;
-}
-
-.clearfix
-{
-	display: block;
-}
