--- a/app/views/lanyards/_full_lanyard.html.erb
+++ b/app/views/lanyards/_full_lanyard.html.erb
@@ -1,7 +1,8 @@
-<div class="iavouch_mast cleanslate">
+<div class="iavouch_mast">
 
 <!-- <a href="#" class="toggle-button">click to toggle</a>   --> 
-<div class="iavouch_lanyard_wrapper">    
+<div class="iavouch_lanyard_wrapper"> 
+   
 <% if !@remoteurl.nil? %>   
   <div class="comments">
     <div class="comments-header">
