--- a/app/views/shared/_recording.html.erb
+++ b/app/views/shared/_recording.html.erb
@@ -8,9 +8,9 @@
         <td class="table-rightside">
           <p><%= recording.user.full_name %> / <%= recording.user.title %>  @ <%= recording.user.company %> </p>                        
           <div class="review-each">
-           <audio src="<%= recording.audio_file + ".mp3" %>" preload="none"></audio>
+           <audio src="<%= recording.audio_file + ".mp3" %>" preload="none"></audio>                
            <div class="review-left">posted <%= time_ago_in_words(recording.created_at) %> ago.</div>
-           <div class="review-right">share / like / <span class="bold toggle">synopsis</span></div>
+           <div class="review-right">share / like / <b class="bold toggle">synopsis</b></div>
            <div class="clear"></div>
            <div class="trans">
             <%= recording.synopsis.empty? ? recording.transcription : recording.synopsis %>
