--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,26 +2,24 @@
 <html>
 <head>
   <title>Vouch</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+
+  <%= javascript_include_tag :defaults, 'install-page', 'iphone-style-checkboxes' %>
+  <%= stylesheet_link_tag 'screen.css', :media => 'screen, projection' %>
+  <%= stylesheet_link_tag 'print.css', :media => 'print' %>
+  <!--[if IE]><%= stylesheet_link_tag 'ie.css', :media => 'screen, projection' %><![endif]-->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('.comment-style :checkbox').iphoneStyle({ checkedLabel: 'Blog', uncheckedLabel: 'Banner' });
+        $('.comment-location :checkbox').iphoneStyle({ checkedLabel: 'Top', uncheckedLabel: 'Bottom' });   
+      });
+  </script>
+  
   <%= csrf_meta_tag %>
 </head>
 <body> 
 <% flash.each do |key, msg| %>	
 <%= content_tag :div, msg, :id => key  %>
-<% end %>      
-
-<div id='container'> 
-	<div id="user_nav">
-		<% if user_signed_in? %>
-		Signed in as <%= current_user.email %>. Not you?
-		<%= link_to "Sign out", destroy_user_session_path %>
-		<% else %>
-		<%= link_to "Sign up", authentications_path %> or <%= link_to "Sign in", authentications_path %> or <%= link_to "Login with Twitter", "/auth/twitter" %>
-		<% end %>
-
-	</div>	
-	
+<% end %>
 
 <%= yield %>
 
