--- a/public/stylesheets/embed/e-main.css
+++ b/public/stylesheets/embed/e-main.css
@@ -1,10 +1,14 @@
 #iavouch_3 .comments .comments-each table.review-container{
 	width:100%;
 }        
+#iavouch_3 .bold{
+ 	font-weight: 400;
+}  
 #iavouch_3 .toggle{
 	font-weight: bold;
 	background-color:lightgrey;
 	padding-bottom:2px;
+  line-height:20px;  
 }
 
 /* #iavouch 3*/
@@ -119,9 +123,11 @@
 /* start review text left and right*/
 #iavouch_3 .review-left{
 	float:left;
+/*	margin-top:2px; */
 }            
 #iavouch_3 .review-right{
 	float:right;
+/*	margin-top:2px;*/
 }
 
 /* transcript*/
