--- a/public/stylesheets/text.css
+++ b/public/stylesheets/text.css
@@ -1,97 +1,16 @@
-/*
-	960 Grid System ~ Text CSS.
-	Learn more ~ http://960.gs/
+/* 960 Grid System ~ Text CSS.
+ * Learn more ~ http://960.gs/
+ * *
+ * Licensed under GPL and MIT. */
+.columns {
+  font-family: 'Helvetica Neu', sans-serif;
+  font: 'Helvetica Neu', sans-serif;
+  font-weight: 500;
+  font-size: 1.2em; }
 
-	Licensed under GPL and MIT.
-*/
+.columns p {
+  font-size: 0.8em;
+  margin: 0 0 20px 10px; }
 
-/* =Basic HTML
---------------------------------------------------------------------------------*/
-
-body
-{
-	font: 13px/1.5 Helvetica, Arial, 'Liberation Sans', FreeSans, sans-serif;
-}
-
-a:focus
-{
-	outline: 1px dotted invert;
-}
-
-hr
-{
-	border-color: #ccc;
-	border-style: solid;
-	border-width: 1px 0 0;
-	clear: both;
-	height: 0;
-}
-
-/* =Headings
---------------------------------------------------------------------------------*/
-
-h1
-{
-	font-size: 25px;
-}
-
-h2
-{
-	font-size: 23px;
-}
-
-h3
-{
-	font-size: 21px;
-}
-
-h4
-{
-	font-size: 19px;
-}
-
-h5
-{
-	font-size: 17px;
-}
-
-h6
-{
-	font-size: 15px;
-}
-
-/* =Spacing
---------------------------------------------------------------------------------*/
-
-ol
-{
-	list-style: decimal;
-}
-
-ul
-{
-	list-style: square;
-}
-
-li
-{
-	margin-left: 30px;
-}
-
-p,
-dl,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-ol,
-ul,
-pre,
-address,
-fieldset
-{
-	margin-bottom: 20px;
-}
+.columns b {
+  font-weight: 600; }
